[gd_scene load_steps=14 format=3 uid="uid://cwr1gaxdbbpg"]

[ext_resource type="Theme" uid="uid://b04ydxpqblepw" path="res://TileTemplate/Themes/TileTemplateTheme.tres" id="1_nmprm"]
[ext_resource type="Script" uid="uid://xtvdys3ou71m" path="res://TileTemplate/Scripts/blueprint_element.gd" id="2_pgb0o"]
[ext_resource type="Shader" uid="uid://br30xcjtnx5pe" path="res://TileTemplate/Shaders/BlueprintTextureMapper.gdshader" id="3_pgb0o"]
[ext_resource type="Texture2D" uid="uid://bclyl0s3oe487" path="res://TileTemplate/Sprites/ForegroundBackground.png" id="5_rwrxj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2h6f1"]
resource_local_to_scene = true
shader = ExtResource("3_pgb0o")
shader_parameter/isForeground = false
shader_parameter/falloff = 0.0
shader_parameter/warp = -0.03

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rwrxj"]
resource_local_to_scene = true
shader = ExtResource("3_pgb0o")
shader_parameter/isForeground = true
shader_parameter/falloff = 0.0
shader_parameter/warp = -0.03

[sub_resource type="AtlasTexture" id="AtlasTexture_2h6f1"]
resource_local_to_scene = true
atlas = ExtResource("5_rwrxj")
region = Rect2(0, 0, 20, 20)

[sub_resource type="Animation" id="Animation_rwrxj"]
resource_name = "Deselect"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.5, 1), Vector2(0.7, 1), Vector2(1.1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MarginContainer/ForegroundBackgroundTexture:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}

[sub_resource type="Animation" id="Animation_pgb0o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MarginContainer/ForegroundBackgroundTexture:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}

[sub_resource type="Animation" id="Animation_2h6f1"]
resource_name = "Ready"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.3, 1.3), Vector2(0.8, 0.8), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MarginContainer/ForegroundBackgroundTexture:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}

[sub_resource type="Animation" id="Animation_nmprm"]
resource_name = "Selected"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.2, 0.8), Vector2(0.8, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MarginContainer/ForegroundBackgroundTexture:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}

[sub_resource type="Animation" id="Animation_n4ij0"]
resource_name = "DrawLayerSwitch"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.08726646259971647, 0.08726646259971647, -0.04363323129985824, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MarginContainer/ForegroundBackgroundTexture:custom_minimum_size")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(40, 40), Vector2(22, 22), Vector2(20, 20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgb0o"]
_data = {
&"Deselect": SubResource("Animation_rwrxj"),
&"DrawLayerSwitch": SubResource("Animation_n4ij0"),
&"RESET": SubResource("Animation_pgb0o"),
&"Ready": SubResource("Animation_2h6f1"),
&"Selected": SubResource("Animation_nmprm")
}

[node name="BlueprintElement" type="Panel"]
custom_minimum_size = Vector2(160, 160)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1760.0
offset_bottom = -920.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 80)
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_nmprm")
script = ExtResource("2_pgb0o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nmprm")

[node name="Background" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2h6f1")
layout_mode = 2
expand_mode = 1

[node name="Foreground" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rwrxj")
layout_mode = 2
expand_mode = 1

[node name="Selected" type="ReferenceRect" parent="MarginContainer"]
visible = false
layout_mode = 2
border_color = Color(1, 1, 1, 1)
border_width = 2.0
editor_only = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ForegroundBackgroundTexture" type="TextureRect" parent="MarginContainer/MarginContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource("AtlasTexture_2h6f1")

[node name="Button" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nmprm")
toggle_mode = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pgb0o")
}

[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
